1) Удалены лишние файлы из папки Web 2) Теперь через страницу check status можно запрашивать статус моделирования, правда вручную

--- a/HttpServer/web/Check model status page.html
+++ b/HttpServer/web/Check model status page.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if IE 7 ]> <html lang="en" class="ie7"> <![endif]-->
 <!--[if IE 8 ]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9 ]> <html lang="en" class="ie9"> <![endif]-->
@@ -21,12 +21,12 @@
 	<body>
 		
 		<div style="margin-bottom:20px;">
-			<h1>Type name of the process and push "Start"</h1>	
+			<h1>Type name of the process and push "Check"</h1>	
 		</div>	
 			<form name="uploader" enctype="multipart/form-data" method="POST"> 	
 		<p>
     <form name="uploader" enctype="multipart/form-data" method="POST">
-             <input type="text" name="model" />		
+             <input type="text" name="process" />		
 		  <div style="margin-bottom:20px;">
 		  <input type="submit" value="Check" /> 
 		  </div>
