--- a/HttpServer/web/Start modeling page.html
+++ b/HttpServer/web/Start modeling page.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if IE 7 ]> <html lang="en" class="ie7"> <![endif]-->
 <!--[if IE 8 ]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9 ]> <html lang="en" class="ie9"> <![endif]-->
@@ -24,14 +24,15 @@
 		</div>	
 			<form name="uploader" enctype="multipart/form-data" method="POST"> 	
 		<p>
-    <form name="uploader" enctype="multipart/form-data" method="POST">
-			<input type="radio" name="subject" value="arch_ac">arch_ac<Br>
-        <input type="radio" name="subject" value="radio_hf">radio_hf<Br> 
-	<input type="text" name="ID" />        
-		  <div style="margin-bottom:20px;">
-		  <input type="submit" value="Send" /> 
-		  </div>
-		</p>
+            <form name="uploader" enctype="multipart/form-data" method="POST">
+                <h2>Choose domain:</h2>                
+                <input type="radio" name="subject" value="arch_ac">arch_ac<Br>
+                <input type="radio" name="subject" value="radio_hf">radio_hf<Br>
+                Type name of the model:<input type="text" name="model" />
+                <div style="margin-bottom:20px;">
+                    <input type="submit" value="Send" />
+                </div>
+</p>
 		</form>
 	</body>
 	
