Теперь состояние процесса моделирования будет опрашиваться автоматически каждые 20 секунд после запуска опроса

--- a/HttpServer/web/Start modeling page.html
+++ b/HttpServer/web/Start modeling page.html
@@ -8,7 +8,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
-		<title>Check status operation page</title>
+		<title>Start modeling page</title>
 		<link rel="stylesheet" media="screen">
 		      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
