1. Убраны лишние строки 2. Поправлен скрипт на стрнице старт моделирования 3. Добавлена обработка ошибок с функцией EntryPoint

--- a/HttpServer/web/404.html
+++ b/HttpServer/web/404.html
@@ -1,14 +1,8 @@
 <html>
 <head>
-<title>Ошибка 404</title>
+    <title>Error 404</title>
 </head>
 <body>
-<p>К сожалению, запрашиваемая Вами страница не найдена..</p>
-<p>Почему?</p>
-<ol>
-<li>Ссылка, по которой Вы пришли, неверна.
-<li>Вы неправильно указали путь или название страницы.
-<li>Страница была удалёна со времени Вашего последнего посещения.
-</ol>
+    <p>Not found</p>
 </body>
-</html
+</html>
