--- a/HttpServer/web/Start modeling page.html
+++ b/HttpServer/web/Start modeling page.html
@@ -48,11 +48,11 @@
             success: function (msg) {
                 alert(msg);
                 if (msg.includes('Modeling started')) {
-				    window.open("http://127.0.0.1:8080/CheckModelStatusPage.html");
+				    window.open("/CheckModelStatusPage.html");
 						}
             },
             error: function(msg) {
-                alert('ќшибка!');
+                alert('ошибка!');
             },
             cache: false,
             contentType: false,
